--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<html>
+  <head>
+    <title>
+      Welcome
+    </title>
+  </head>
+  <body>
+    <h1>Hello</h1>
+    <p>This a test page</p>
+  </body>
+</html>
