--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <title> Welcome </title>
   </head>
   <body>
-    <h1> Sample page </h1>
-    <p> Sample Test Page </p>
+    <div class="jumbotron">
+  <h1 class="display-4">Hello, all!</h1>
+  <p class="lead"> This is a sample test page </p>
+  <hr class="my-4">
+  <p>It uses bootstrap.</p>
+  
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
