--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <div class="jumbotron">
-  <h1 class="display-4">Hello, all!</h1>
-  <p class="lead"> This is a sample test page </p>
+  <h1 class="display-4">Hello, all! I am Shubhankar Kulkarni from SRMIST-KTR</h1>
+  <p class="lead"> Shubhankar Kulkarni <ks2197@srmist.edu.in> </p>
   <hr class="my-4">
   <p>It uses bootstrap.</p>
   
