--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
   <body>
     <div class="jumbotron">
   <h1 class="display-4">Hello, all! I am Shubhankar Kulkarni from SRMIST-KTR</h1>
-  <p class="lead"> Shubhankar Kulkarni <ks2197@srmist.edu.in> </p>
+  <p class="lead"> Shubhankar Kulkarni  </p>
   <hr class="my-4">
-  <p>It uses bootstrap.</p>
+  <p> Department of Computer science and Engineering </p>
+  <p> Contact: ks2197@srmist.edu.in </p>
+      
   
 </div>
 
