--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="jumbotron">
-  <h1 class="display-4">Hello, all! I am Shubhankar Kulkarni from SRMIST-KTR</h1>
+  <h1 class="display-4">Hello, all! </h1>
   <p class="lead"> Shubhankar Kulkarni  </p>
   <hr class="my-4">
   <p> Department of Computer science and Engineering </p>
