--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title> Welcome </title>
+    <title> Homepage of Shubhankar Kulkarni </title>
   </head>
   <body>
     <div class="jumbotron">
   <h1 class="display-4">Hello, all! </h1>
-  <p class="lead"> Shubhankar Kulkarni  </p>
+  <p class="lead">  </p>
   <hr class="my-4">
-  <p> Department of Computer science and Engineering </p>
-  <p> Contact: ks2197@srmist.edu.in </p>
+  <p> BTech Student </p>
+  <p> Roll No: RA2111003011211 </p>
+  <P> Department of Computer Science and Engineering</P>
+  <p> SRM Institute of Science and Technology </p>
       
   
 </div>
