--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="jumbotron">
-  <h1 class="display-4">Hello, all! </h1>
+  <h1 class="display-3">Shubhankar Kulkarni </h1>
   <p class="lead">  </p>
   <hr class="my-4">
   <p> BTech Student </p>
