--- a/index.html
+++ b/index.html
@@ -3,34 +3,32 @@
   <head>
     <!-- Required meta tags -->
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6YFZVTLQZP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6YFZVTLQZP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-6YFZVTLQZP');
-</script>
+      gtag('config', 'G-6YFZVTLQZP');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title> Homepage of Shubhankar Kulkarni </title>
+    <title>Homepage of Shubhankar Kulkarni</title>
   </head>
   <body>
     <div class="jumbotron">
-  <h1 class="display-2"> Homepage of Shubhankar Kulkarni </h1>
-  <p class="lead">  </p>
-  <hr class="my-4">
-  <p> BTech Student </p>
-  <p> Roll No: RA2111003011211 </p>
-  <P> Department of Computer Science and Engineering</P>
-  <p> SRM Institute of Science and Technology </p>
-      
-  
-</div>
+      <h1 class="display-2" style="font-size: small; font-weight: bold;">Homepage of Shubhankar Kulkarni</h1>
+      <p class="lead"></p>
+      <hr class="my-4">
+      <p>BTech Student</p>
+      <p>Roll No: RA2111003011211</p>
+      <p>Department of Computer Science and Engineering</p>
+      <p>SRM Institute of Science and Technology</p>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
