--- a/index.html
+++ b/index.html
@@ -17,17 +17,28 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <style>
+      .display-2 {
+        font-size: 2em; /* Increase the font size 2 times */
+        font-weight: bold;
+      }
+    </style>
+
     <title>Homepage of Shubhankar Kulkarni</title>
   </head>
   <body>
     <div class="jumbotron">
-      <h1 class="display-2" style="font-size: small; font-weight: bold;">Homepage of Shubhankar Kulkarni</h1>
+      <h1 class="display-2">Homepage of Shubhankar Kulkarni</h1>
       <p class="lead"></p>
       <hr class="my-4">
       <p>BTech Student</p>
       <p>Roll No: RA2111003011211</p>
-      <p>Department of Computer Science and Engineering</p>
-      <p>SRM Institute of Science and Technology</p>
+      <p>
+        <a href="https://www.srmist.edu.in/department/department-of-computing-technologies/" target="_blank">Department of Computer Science and Engineering</a>
+      </p>
+      <p>
+        <a href="https://www.srmist.edu.in/" target="_blank">SRM Institute of Science and Technology</a>
+      </p>
     </div>
 
     <!-- Optional JavaScript -->
@@ -37,3 +48,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
+
