--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         font-size: 2em; /* Increase the font size 2 times */
         font-weight: bold;
       }
+      .custom-spacing {
+        margin-bottom: 5px; /* Adjust the spacing as needed */
+      }
     </style>
 
     <title>Homepage of Shubhankar Kulkarni</title>
@@ -33,10 +36,10 @@
       <hr class="my-4">
       <p>BTech Student</p>
       <p>Roll No: RA2111003011211</p>
-      <p>
+      <p class="custom-spacing">
         <a href="https://www.srmist.edu.in/department/department-of-computing-technologies/" target="_blank">Department of Computer Science and Engineering</a>
       </p>
-      <p>
+      <p class="custom-spacing">
         <a href="https://www.srmist.edu.in/" target="_blank">SRM Institute of Science and Technology</a>
       </p>
     </div>
