--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         font-weight: bold;
       }
       .custom-spacing {
-        margin-bottom: 5px; /* Adjust the spacing as needed */
+        margin-bottom: 10px; /* Adjust the spacing as needed */
       }
     </style>
 
@@ -34,8 +34,8 @@
       <h1 class="display-2">Homepage of Shubhankar Kulkarni</h1>
       <p class="lead"></p>
       <hr class="my-4">
-      <p>BTech Student</p>
-      <p>Roll No: RA2111003011211</p>
+      <p class="custom-spacing">BTech Student</p>
+      <p class="custom-spacing">Roll No: RA2111003011211</p>
       <p class="custom-spacing">
         <a href="https://www.srmist.edu.in/department/department-of-computing-technologies/" target="_blank">Department of Computer Science and Engineering</a>
       </p>
