--- a/index.html
+++ b/index.html
@@ -18,12 +18,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <style>
+      body {
+        font-family: Calibri, sans-serif;
+        font-size: 11px;
+      }
+
       .display-2 {
-        font-size: 2em; /* Increase the font size 2 times */
+        font-family: Calibri, sans-serif;
+        font-size: 11px;
         font-weight: bold;
       }
+
       .custom-spacing {
-        margin-bottom: 10px; /* Adjust the spacing as needed */
+        margin-bottom: 10px;
       }
     </style>
 
@@ -51,4 +58,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
