--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <style>
       body {
+        background-color: white; /* Set the background color to white */
         font-family: Calibri, sans-serif;
         font-size: 13.5px;
       }
@@ -58,5 +59,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
-
-
