--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <style>
       body {
-        background-color: white;
+        background-color: white; /* Set the background color to white */
         font-family: Calibri, sans-serif;
         font-size: 13.5px;
       }
@@ -28,17 +28,10 @@
         font-family: Calibri, sans-serif;
         font-size: 13.5px;
         font-weight: bold;
-        position: absolute;
-        top: 0;
-        left: 0;
       }
 
       .custom-spacing {
         margin-bottom: 10px;
-      }
-
-      .container {
-        margin-top: 70px;
       }
     </style>
 
@@ -66,4 +59,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
-
