--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
     <style>
       body {
-        background-color: white; /* Set the background color to white */
         font-family: Calibri, sans-serif;
         font-size: 13.5px;
+        background-color: white; /* Set background to white */
       }
 
       .display-2 {
         font-family: Calibri, sans-serif;
-        font-size: 13.5px;
+        font-size: 15px; /* Increase font size to 15px */
         font-weight: bold;
       }
 
@@ -59,3 +59,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
+
